2012-02-25  Aljosha Papsch  <al@creek.rivers>

	* src/Makefile.am: Removed version.h, rw_config.h and rw_config.c from rippix_SOURCES
	Added gettext.h, config_rw.h, config_rw.c, windowbuilder.h and windowbuilder.c to rippix_SOURCES
	* configure.ac: Added checking for GConf, cleaned up a bit. No messing around with GTK_LIBS, GTK_CLFAGS, LIBS anymore. Also added some macros, the abbreviation for gettext function and macros for config_open_close.
	* src/version.h: Removed version.h. All functionality is provided by config.h which is generated by autoconf.
	* src/main.c: Included <locale.h> and "gettext.h". Removed <glib/gi18n.h>

2012-01-22  Aljosha Papsch  <papsch.al@googlemail.com>

	* main_window_handler.c (main_window_handler): Callbacks for the buttons in menubar are directly added and not via the buttons struct array. This solves the crash which was caused by a null pointer in the buttons array.

	* err_dialog_handler.c (err_handler): Usage of GtkMessageDialog. Error message from strerror and extra message are printed to the console for the time being.

2012-01-11  Aljosha Papsch  <papsch.al@googlemail.com>

	* select_frame_handler.c (select_frame_handler): rip_or_encode_combobox has now default entry displayed. track_play_pixmap was introduced to contain images for play_button[]. track_filename_entry has hexpand property set.

	* config_window_handler.c (cw_wav_handler, cw_mp3_handler): menu has now default entry displayed.

	* main_window_handler.c (main_window_handler): main_frame has no label anymore. main_window has new default size 600x400. The tool_item objects in buttons[] now have tooltips.

2012-01-09  Aljosha Papsch  <papsch.al@googlemail.com>

	* status_frame_handler.c: Ported to GTK+3. By today, Rippix is fully ported to GTK+ 3, but doesn't look very nice atm.
	(time_status_frame_handler): table was replaced with grid, making use of the newer GtkGrid instead of GtkTable.
	(wm_status_frame_handler): Usage of better names (could be enhanced)