@@ -1,10 +1,18 @@
-2012-02-25  Aljosha Papsch  <al@creek.rivers>
+2012-02-26  Aljosha Papsch  <papsch.al@googlemail.com>
+
+	* src/rw_config.h: Added macros to ease access to GConf keys
+	* share/rippix.schemas: Created schemas file for GConf keys
+
+2012-02-25  Aljosha Papsch  <papsch.al@googlemail.com>
 
 	* src/Makefile.am: Removed version.h, rw_config.h and rw_config.c from rippix_SOURCES
 	Added gettext.h, config_rw.h, config_rw.c, windowbuilder.h and windowbuilder.c to rippix_SOURCES
 	* configure.ac: Added checking for GConf, cleaned up a bit. No messing around with GTK_LIBS, GTK_CLFAGS, LIBS anymore. Also added some macros, the abbreviation for gettext function and macros for config_open_close.
 	* src/version.h: Removed version.h. All functionality is provided by config.h which is generated by autoconf.
 	* src/main.c: Included <locale.h> and "gettext.h". Removed <glib/gi18n.h>
+	* src/main.h, src/main.c, src/main_window_handler.c: Renamed ripperX_exit to rippix_exit.
+	* src/main.c: Renamed ripperX_init to rippix_init.
+	* src/main.c, src/main.h: Moved rippix_init declaration from main.c to main.h
 
 2012-01-22  Aljosha Papsch  <papsch.al@googlemail.com>
 
